[gd_scene load_steps=15 format=3 uid="uid://d2mvdo2lc1aup"]

[ext_resource type="Script" uid="uid://8ybshqtbunx2" path="res://Scripts/Sound_Library.gd" id="1_0wo6p"]
[ext_resource type="AudioStream" uid="uid://74iojbegroat" path="res://Assets/SFX/Dash1.mp3" id="2_5npjg"]
[ext_resource type="AudioStream" uid="uid://blqbkxjdrfmd7" path="res://Assets/SFX/Dash2.mp3" id="3_hpbth"]
[ext_resource type="AudioStream" uid="uid://3df4quhnls6x" path="res://Assets/SFX/Dash3.mp3" id="4_qnjjs"]
[ext_resource type="AudioStream" uid="uid://d0vhjiku7qhal" path="res://Assets/SFX/Death1.mp3" id="5_r3g32"]
[ext_resource type="AudioStream" uid="uid://b6ul8kjkjrgf1" path="res://Assets/SFX/Death2.mp3" id="6_h7ctd"]
[ext_resource type="AudioStream" uid="uid://blxswe6kfllyk" path="res://Assets/SFX/Death3.mp3" id="7_jbg1r"]
[ext_resource type="AudioStream" uid="uid://5dimggk388f5" path="res://Assets/SFX/Hit1.mp3" id="8_aen7p"]
[ext_resource type="AudioStream" uid="uid://d0v46bx7qh1w0" path="res://Assets/SFX/Hit2.mp3" id="9_vp0qj"]
[ext_resource type="AudioStream" uid="uid://dkpdwo1ee8uxh" path="res://Assets/SFX/hit3.mp3" id="10_nv5kf"]
[ext_resource type="AudioStream" uid="uid://cco31un32lsqv" path="res://Assets/SFX/hit4.mp3" id="11_6ja15"]
[ext_resource type="AudioStream" uid="uid://do7crajk3cau8" path="res://Assets/SFX/potion.mp3" id="12_ylily"]
[ext_resource type="AudioStream" uid="uid://drvxm1utgonab" path="res://Assets/SFX/Secret Found Long.mp3" id="13_vwmpu"]
[ext_resource type="AudioStream" uid="uid://dyrvi4oanllqe" path="res://Assets/SFX/Secret Found Short.mp3" id="14_mjb71"]

[node name="Sound Library" type="Node2D"]
script = ExtResource("1_0wo6p")

[node name="Dash1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5npjg")

[node name="Dash2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hpbth")

[node name="Dash3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qnjjs")

[node name="Death1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_r3g32")

[node name="Death2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h7ctd")

[node name="Death3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jbg1r")

[node name="Hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_aen7p")

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_vp0qj")

[node name="Hit3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_nv5kf")

[node name="Hit4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_6ja15")

[node name="Potion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_ylily")

[node name="Secret Found Long" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_vwmpu")

[node name="Secret Found Short" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_mjb71")
